# mlir_project_template

./: CMakeLists.txt  README.md
include/: HelloPass.h
lib/: CMakeLists.txt  HelloPass.cpp
test/: hello.mlir
tools/: CMakeLists.txt  hello-opt.cpp
